Add create planning applications API endpoint
