# config/routes.rb
@@ -7,7 +7,7 @@ Rails.application.routes.draw do
 
   namespace :api do
     namespace :v1 do
-      resources :planning_applications, only: %i[index]
+      resources :planning_applications, only: %i[index create]
     end
   end
 end
